--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="robots" content="all,follow" />
-	<link href="cdn/spa.min@18.css" rel="stylesheet" type="text/css" />
+	<link href="cdn/spa.min@19.css" rel="stylesheet" type="text/css" />
 	<link href="cdn/ui.css" rel="stylesheet" type="text/css" />
 	<script>if (typeof(window.module)==='object'){window.module=module;module=undefined}</script>
-	<script src="cdn/spa.min@18.js"></script>
+	<script src="cdn/spa.min@19.js"></script>
 	<script src="cdn/ui.js"></script>
 	<script>if(W.module)module=W.module;</script>
 	<style>
 		html,body { background-color: white; color: black; height: 100%; margin: 0; padding: 0; overflow: hidden; }
 		.m { margin-bottom: 10px; }
 		.padding { padding: 20px; }
-		.link { color: #80B44A; }
+		.link { color: var(--color); }
 		.ui-dark .link { color: #9AD959; }
 		.app { font-size: 18px; cursor: pointer; font-weight: bold; position: relative; width: 33%; display: inline-block; text-align: left; margin-bottom: 10px; padding: 5px; border-radius: 2px; text-align: left; }
 		.app span { color: #80B44A; margin-right: 8px; }
@@ -28,17 +28,17 @@
 		.ui-dark .appbody { background-color: rgba(120,120,120,0.05); }
 		.ui-dark .app:hover { background-color: rgba(200,200,200,0.05); }
 		.appbody i { margin-right: 5px; }
-		.appbody > div { font-size: 11px; color: gray; font-weight: normal; }
+		.appbody > div { font-size: 11px; color: gray; font-weight: normal; height: 16px; overflow: hidden; }
 		.appbody > i { margin-right: 0; width: 15px; text-align: center; position: absolute; font-size: 12px; color: gray; }
 		.app .fa-pencil { right: 35px; top: 40px; }
 		.app .fa-pencil:hover { color: #9AD959; }
-		.app .fa-times-circle { right: 15px; top: 40px; color: #9B5F5F; }
-		.app .fa-times-circle:hover { color: red; }
+		.app .fa-trash-alt { right: 15px; top: 40px; color: #9B5F5F; }
+		.app .fa-trash-alt:hover { color: red; }
 		.ui-dark .app { border-bottom-color: #303030; }
 		.ui-dark .app > i { color: #A0A0A0; }
 		.body img { margin: 0 auto; display: block; }
 		.center { text-align: center }
-		h1 { text-align: center; margin: 20px 0 0; font-size: 24px; font-family: Arial; color: black; font-weight: normal; font-weight: normal; }
+		h1 { margin: 12px 0 10px; font-size: 24px; font-family: Arial; color: black; font-weight: normal; font-weight: normal; }
 		.ui-dark h1 { color: white; }
 		.link { font-size: 12px; }
 		.link i { margin-right: 5px; }
@@ -54,50 +54,80 @@
 		.ui-dark hr { border-color: #363636; }
 		body { user-select: none; }
 		.center { text-align: center; }
-		.darkmode { position: fixed; right: 20px; top: 20px; }
+		.darkmode { float: right; margin: 50px 35px 0 0; }
 		.apps { margin-left: 5px; padding: 0 20px; }
 		.maxwidth { max-width: 1400px; margin: 0 auto; }
 		.movable { -webkit-user-select:none; -webkit-app-region:drag; }
+
+		.logo { float: left; margin-left: 20px; }
+		.meta { margin-left: 140px; }
 
 		@media(max-width: 980px) {
 			.app { display: block; width: 100%; }
 		}
 
+		.toolbar button { height: 32px; line-height: 32px; width: 150px; }
+		.toolbar .ui-searchinput { height: 32px; line-height: 30px; border-radius: var(--radius); margin-left: 10px; }
+		/*.toolbar .ui-searchinput input { width: 250px; }*/
+		.toolbar .ui-searchinput span { line-height: 32px; }
+
 	</style>
 </head>
 <body data---="exec" class="ui-dark" data-bind="darkmode__.ui-dark:value||value==null">
 
-	<div data---="directory"></div>
-	<div data---="message"></div>
+	<div data---="clipboard"></div>
+	<div data---="shortcuts"></div>
 
-	<div class="darkmode">
-		<div data---="togglebutton__darkmode__icontrue:moon;iconfalse:sun"></div>
-	</div>
+	<div class="maxwidth movable">
+		<div>
+			<div class="darkmode">
+				<div data---="togglebutton__darkmode__icontrue:moon;iconfalse:sun"></div>
+			</div>
 
-	<div class="maxwidth">
-		<div class="movable">
 			<br />
 			<br />
-			<div class="center">
+			<div class="logo">
 				<a href="https://www.totaljs.com" target="_blank"><img src="icon.png" width="100" alt="Total.js Code" border="0" /></a>
 			</div>
-			<h1>Total.js <b>Code Editor Online</b></h1>
-			<div class="center"><span class="link exec b" data-exec="app/search"><i class="fa fa-search"></i>Search Code Editor</span> &nbsp; <span class="link exec" data-exec="app/create"><i class="fa fa-plus-circle"></i>Add Code Editor</span> &nbsp; <span class="link exec" data-exec="app/export"><i class="fa fa-cloud-upload"></i>Export &amp; Import</span></div>
+			<div class="meta">
+				<h1>Total.js <b>Code Editor</b></h1>
+
+				<div class="toolbar">
+					<nav class="pull-left">
+						<button class="exec b" data-exec="app/create"><i class="fa fa-plus-circle"></i>Add Code Editor</button>
+						<button class="exec" data-exec="app/export"><i class="fa fa-cloud-upload"></i>Export &amp; Import</button>
+					</nav>
+					<div style="margin:0 35px 0 300px">
+						<div data---="searchinput__%search__placeholder:Search;autofocus:1"></div>
+					</div>
+				</div>
+
+			</div>
+			<div class="clearfix"></div>
 		</div>
 	</div>
 	<hr style="margin:30px 0 0" />
 
-	<div data---="viewbox__null__parent:window;margin:246;scrollbar:1">
+	<div data---="viewbox__null__parent:window;margin:172;scrollbar:1;scrollbarshadow:1">
 		<div class="maxwidth">
 			<br />
 			<br />
 			<div data---="movable__null__selector:.app;exec:app/sort">
-				<div data-bind="places__template__changes__exec:app/status" class="apps">
-					<script type="text/html">
-						{{ foreach m in value }}
-							<div data-url="{{ m.url }}" draggable="true" data-index="{{ $index }}" class="app exec{{ if m.disabled }} disabled{{ fi }}" data-exec="app/go"><div class="appbody"><i class="fa fa-times-circle exec" data-exec="app/remove"></i><i class="fa fa-pencil exec" data-exec="app/edit"></i>{{ m.url | cloudicon }}{{ m.name }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div><div><i class="fa fa-globe"></i>{{ m.url }}</div><div class="version" data-url="{{ m.url }}"><i class="far fa-circle"></i>---</div></div></div>
-						{{ end }}
-					</script>
+				<div data---="search__%search__selector:.app">
+					<div data-bind="places__template:.app__changes__exec:app/status" class="apps">
+						<script type="text/html">
+							{{ foreach m in value }}
+								<div data-url="{{ m.url }}" draggable="true" data-index="{{ $index }}" class="app exec{{ if m.disabled }} disabled{{ fi }}" data-exec="app/go" data-search="{{ m.name }}">
+									<div class="appbody">
+										<i class="fa fa-trash-alt exec" data-exec="app/remove"></i><i class="fa fa-pencil exec" data-exec="app/edit"></i>{{ m.url | cloudicon }}{{ m.name }}
+										<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div>
+										<div><i class="fa fa-globe"></i>{{ m.url }}</div>
+										<div class="version" data-url="{{ m.url }}"><i class="far fa-circle"></i>---</div>
+									</div>
+								</div>
+							{{ end }}
+						</script>
+					</div>
 				</div>
 			</div>
 			<div class="movable">
@@ -108,19 +138,22 @@
 		</div>
 	</div>
 
-	<div data---="form__common.form__if:codeformexport;bg:true;title:Export/Import;icon:cloud;width:600;autofocus:true;submit:app/import" class="hidden" data-scope="codeformexport">
+	<div data---="miniform__common.form__if:codeformexport;bg:true;title:Export/Import;icon:cloud;width:600;autofocus:true;submit:app/import" class="hidden" data-scope="codeformexport">
 		<script type="text/html">
 			<div class="padding">
-				<div data---="textarea__?.data__required:true;height:500">Data</div>
+				<div data---="input__?.data__required:true;height:200;type:multiline">Data</div>
+				<div class="help m"><span class="exec link" data-exec="app/copy"><i class="fa fa-copy"></i>Copy to clipboard</span></div>
+				<div data---="input__backup__placheholder:/path/to/dropbox/code.txt"><b>Path for auto-backup</b></div>
+				<div class="help" style="min-height:22px;line-height:16px">All Total.js Code Editor instances will be backed up on the defined absolute path. <span data-bind="backup__exec:showhide" class="green ml5 b hidden"><i class="fa fa-save mr5"></i>Path successfully saved</span></div>
 			</div>
-			<nav data---="validation__?">
+			<nav data---="validate__?">
 				<button name="submit" disabled="disabled"><i class="fa fa-cloud-download"></i> IMPORT</button>
 				<button name="cancel">Cancel</button>
 			</nav>
 		</script>
 	</div>
 
-	<div data---="form__common.form__if:add;bg:true;title:Code Editor;icon:laptop-code;width:600;autofocus:true;submit:app/submit" class="hidden" data-scope="codeform">
+	<div data---="miniform__common.form__if:add;bg:true;title:Code Editor;icon:laptop-code;width:600;autofocus:true;submit:app/submit" class="hidden" data-scope="codeform">
 		<script type="text/html">
 			<div class="padding">
 				<div data---="input__?.name__required:true;malength:40__'Work'">Name</div>
@@ -130,22 +163,8 @@
 				<div data---="input__?.path__placeholder:/desktop/git/__''">Path to repositories</div>
 				<div class="help">Code Electron will synchronize modified files locally.</div>
 			</div>
-			<nav data---="validation__?">
+			<nav data---="validate__?">
 				<button name="submit" disabled="disabled"><i class="fa fa-floppy-o"></i> SAVE</button>
-				<button name="cancel">Cancel</button>
-			</nav>
-		</script>
-	</div>
-
-	<div data---="form__common.form__if:cloudimport;bg:true;title:Cloud import;icon:cloud;width:600;autofocus:true;submit:app/cloudimportsubmit" class="hidden" data-scope="cloudimport">
-		<script type="text/html">
-			<div class="padding">
-				<div data---="input__?.token__required:true__''">Access Token</div>
-				<div class="help m">You can obtain in Payments section on <a href="https://platform.totaljs.com?open=payments" target="_blank">https://platform.totaljs.com</a>.</div>
-				<div data---="input__?.path__placeholder:/desktop/git/__''">Path to repositories</div>
-			</div>
-			<nav data---="validation__?">
-				<button name="submit" disabled="disabled"><i class="fa fa-cloud-download"></i> IMPORT</button>
 				<button name="cancel">Cancel</button>
 			</nav>
 		</script>
@@ -153,6 +172,7 @@
 
 	<script>
 
+		var common = {};
 		var places = [];
 		var Electron = require('electron');
 
@@ -165,12 +185,12 @@
 				myuid = JSON.stringify(ua);
 				CACHE('uid', myuid, '20 years');
 			}
-
 			AJAX('POST https://visitors.trackomator.com/track/code/', PARSE(myuid));
 		});
 
-		CACHEPATH('darkmode', '20 years');
 		CACHEPATH('places', '20 years');
+		CACHEPATH('darkmode_false', '20 years');
+		CACHEPATH('backup', '20 years');
 
 		// require('electron').remote.getGlobal('META').url = location.href;
 
@@ -206,8 +226,12 @@
 			};
 
 			exports.export = function() {
-				SETR('codeformexport.data', places && places.length ? ENCRYPT(places, 'totaljscode') : '');
+				common.skipbackup = true;
+				SET('codeformexport.data @reset', places && places.length ? ENCRYPT(places, 'totaljscode') : '');
 				SET('common.form', 'codeformexport');
+				setTimeout(function() {
+					common.skipbackup = false;
+				}, 1000);
 			};
 
 			exports.create = function() {
@@ -215,9 +239,8 @@
 				DEFAULT('codeform__{}');
 			};
 
-			exports.cloudimport = function() {
-				SET('common.form', 'cloudimport');
-				DEFAULT('cloudimport__{}');
+			exports.copy = function() {
+				SETTER('clipboard/copy', codeformexport.data);
 			};
 
 			exports.import = function() {
@@ -261,42 +284,6 @@
 				places[index + 1] = a;
 
 				REWRITE2('places', places);
-			};
-
-			exports.cloudimportsubmit = function() {
-				AJAX('GET https://opcloud.totaljs.cloud/api/usertoken/?token=' + cloudimport.token, function(data) {
-
-					if (data && data[0] && data[0].error) {
-						FUNC.messageresponse()(data);
-						NULL('common.form');
-						return;
-					}
-
-					var is = false;
-
-					for (var i = 0; i < data.length; i++) {
-						var item = data[i];
-						if (!item || !item.url || !item.name)
-							continue;
-
-						item.url = 'https://' + item.url;
-						var record = places ? places.findItem('url', item.url) : null;
-						if (record == null) {
-							item.path = cloudimport.path || '';
-							item.created = new Date();
-							item.updated = undefined;
-							places.push(item);
-							is = true;
-						}
-					}
-
-					if (is) {
-						UPDATE('places');
-						setTimeout(exports.status, 500);
-					}
-
-					NULL('common.form');
-				});
 			};
 
 			exports.sort = function(list) {
@@ -422,6 +409,30 @@
 			return o + 'x' + HASH(o + (key || ''), true);
 		};
 
+		FIND('shortcuts', function(com) {
+			com.register('CMD+F, CTRL+F', function() {
+				SETTER('searchinput/autofocus');
+			});
+
+			com.register('enter', function() {
+				if (!common.form && GET('%search'))
+					$('.app:visible').trigger('click');
+			});
+
+		});
+
+		function showhide(value, path, el) {
+			if (!common.skipbackup)
+				el.rclass('hidden').aclass('hidden', 1000);
+		}
+
+		setTimeout(function() {
+			WATCH('places', function() {
+				W.backup && require('fs').writeFile(W.backup, ENCRYPT(places, 'totaljscode'), function(err) {
+					console.log('SAVED', err);
+				});
+			});
+		}, 1000);
 	</script>
 
 </body>
